--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ languageCode = "en-us"
 SectionPagesMenu = "main"
 pluralizelisttitles= "false"
 pygmentsUseClassic=true
+publishDir = "docs"
 
 [menu]
   [[menu.main]]
